# pypandas

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_sample_data.py
src/real_estate_analysis/: __init__.py  analysis.py  cli.py  data.py  features.py
src/real_estate_analysis/data/: listings.csv
tests/: conftest.py  test_analysis.py  test_cli.py  test_data.py  test_features.py
